<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mst.nsh9b3.uface.MainActivity"
    android:background="@color/background_material_dark">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/uFace_LinearLayout"
        android:id="@+id/uFace_ImageView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uFace_LinearLayout"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/uFace_OptionsButton"
            android:text="@string/uFace_OptionsButton"
            android:textSize="12sp"
            android:drawableRight="@android:drawable/ic_dialog_alert"
            android:drawableEnd="@android:drawable/ic_dialog_alert"
            android:layout_weight="1"
            android:onClick="onClickOptions"
            android:singleLine="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/uFace_PictureButton"
            android:text="@string/uFace_PictureButton"
            android:textSize="12sp"
            android:drawableRight="@android:drawable/ic_menu_camera"
            android:drawableEnd="@android:drawable/ic_menu_camera"
            android:layout_weight="1"
            android:onClick="onClickTakePicture"
            android:singleLine="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/uFace_AuthenticateButton"
            android:text="@string/uFace_AuthenticateButton"
            android:textSize="12sp"
            android:drawableRight="@android:drawable/ic_secure"
            android:drawableEnd="@android:drawable/ic_secure"
            android:layout_weight="1"
            android:onClick="onClickAuthenticate"
            android:singleLine="true"/>
    </LinearLayout>
</RelativeLayout>
